# nox-cs

./: .gitignore  .gitmodules  nox.sln  readme.md
.github/workflows/: main.yml
assets/: top_down.ldtk
assets/shaders/: shader_reflection.yaml  shader_simple_glsl300es_fs.glsl  shader_simple_glsl430_vs.glsl  shader_simple_metal_macos_fs.metal  shader_simple_metal_macos_vs.metal
managed/: Nox.sln  NuGet.config
managed/Nox/: .gitignore  AudioGame.cs  MyGame.cs  Nox.csproj  ShaderGame.cs  libnox.dylib
managed/Nox.Samples/: .gitignore  AudioGame.cs  EventGame.cs  GamepadGame.cs  GlobalTransformGame.cs  LdtkGame.cs  MeshGame.cs  MyGame.cs  Nox.Samples.csproj  PhysicsGame.cs  Program.cs  ShaderGame.cs  SpriteAtlasGame.cs  SpriteFontGame.cs  TransformGame.cs
managed/Nox.Samples/CityBuilder/: FlowerTycoonGame.cs
managed/Nox.Samples/Ldtk/: Schema.cs
managed/Nox/Framework/: Application.cs  AudioDevice.cs  Bindings.cs  Buffer.cs  Events.cs  Font.cs  Game.cs  Gamepad.cs  GraphicsDevice.cs  Image.cs  Mouse.cs  Quad.cs  QuadBuffer.cs  RectanglePacker.cs  RenderPipeline.cs  Renderer2D.cs  Sampler.cs  Shader.cs  SpriteAtlas.cs  SpriteBatch.cs  SpriteFont.cs  Texture2D.cs  Transform2D.cs  Vertex2D.cs  VertexPosUvCol.cs  WavFileReader.cs  Window.cs
managed/Nox/Framework/Audio/: AudioDevice.cs  AudioMixer.cs  IAudioPlayer.cs  IAudioSource.cs  NullAudioSource.cs  StaticAudioSource.cs  StereoFrame16.cs  StereoFrameF.cs  WavFile.cs
managed/Nox/MonoGame/: Color.cs  MathHelper.cs
managed/Nox/Native/: Enums.cs  Functions.cs  Structs.cs
managed/Nox/Properties/: launchSettings.json
managed/Nox/Resources/Shaders/Simple2D/: shader_reflection.yaml  shader_simple_glsl300es_vs.glsl  shader_simple_glsl430_fs.glsl  shader_simple_glsl430_vs.glsl  shader_simple_hlsl5_fs.hlsl  shader_simple_hlsl5_vs.hlsl  shader_simple_metal_macos_vs.metal
managed/Nox/Shaders/: IOVariableDescription.cs  ImageDescription.cs  ImageSamplerPairDescription.cs  ProgramDescription.cs  SamplerDescription.cs  ShaderDescription.cs  ShaderMetadata.cs  StageDescription.cs  UniformBlockDescription.cs  UniformDescription.cs
native/: .gitignore  CMakeLists.txt  gen-shaders.ps1  gen-shaders.sh
native/include/: shd.h
native/shaders/: shd.glsl
native/src/: common.h  event.c  event.h  font.c  image.c  lib.h  main.c  renderer.c  renderer.h
shaders/: gen-shaders.sh  shd.glsl
